--- a/index.html
+++ b/index.html
@@ -1,85 +1,99 @@
 ---
-layout: compress
+title: Arcana
+layout: default
 ---
-<!DOCTYPE html>
-<html lang="en" class="no-js">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{{ site.title }}</title>
-        <meta name="description" content="{{ site.description }}" />
-        <meta name="keywords" content="{{ site.keywords }}" />
-        <meta name="author" content="{{ site.author }}" />
-        <link rel="shortcut icon" href="img/favicon.ico">
-        <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-        <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.3.0/css/font-awesome.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/modern-blog.min.css" />
-        <!--[if IE]>
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-        <script>
-        if (navigator.userAgent.toLowerCase().indexOf('firefox') > -1) {
-        var root = document.getElementsByTagName('html')[0];
-        root.setAttribute('class', 'ff');
-        };
-        </script>
-    </head>
-    <body class="body">
-        <div class="container">
-            <header class="header">
-                <h1>Modern Blog<span>A Clean, Fresh Minimal Look.</span></h1>
-                <nav class="links">
-                    <a href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
-                    <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
-                    <a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
-                    <a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>
-                </nav>
-            </header>
-            <div class="content">
-                <!-- trianglify pattern container -->
-                <div class="pattern pattern--hidden"></div>
-                <!-- cards -->
-                <div class="wrapper">
-                    {% for post in site.posts %}
-                        <div class="card">
-                            <div class="card__container card__container--closed">
-                                <svg class="card__image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 1200" preserveAspectRatio="xMidYMid slice">
-                                    <defs>
-                                    <clipPath id="{{ post.subtitle | slugify }}">
-                                <polygon class="clip" points="0,1200 0,0 1920,0 1920,1200"></polygon>
-                                </clipPath>
-                                </defs>
-                                <image clip-path="url(#{{ post.subtitle | slugify }})" width="1920" height="1200" xlink:href="{{ post.image }}"></image>
-                            </svg>
-                            <div class="card__content">
-                                <i class="card__btn-close fa fa-times"></i>
-                                <div class="card__caption">
-                                    <h2 class="card__title">{{ post.title }}</h2>
-                                    <p class="card__subtitle">{{ post.subtitle }}</p>
-                                </div>
-                                <div class="card__copy">
-                                    <div class="meta">
-                                        <img class="meta__avatar" src="{{ post.avatar }}" />
-                                        <span class="meta__author">{{ post.author }}</span>
-                                        <span class="meta__date">{{ post.date | date: "%b %-d, %Y" }}</span>
-                                    </div>
-                                    {{ post.content }}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-                <!-- /cards -->
-            </div>
-        </div>
-        <!-- /container -->
-        <!-- JS -->
-        <script src="js/vendors/trianglify.min.js"></script>
-        <script src="js/vendors/TweenMax.min.js"></script>
-        <script src="js/vendors/ScrollToPlugin.min.js"></script>
-        <script src="js/vendors/cash.min.js"></script>
-        <script src="js/card-modern-blog.min.js"></script>
-        <script src="js/modern-blog.min.js"></script>
-    </body>
-</html>
+			
+<!-- Banner -->
+	<section id="banner">
+		<header>
+			<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
+			<a href="#" class="button">Learn More</a>
+		</header>
+	</section>
+
+<!-- Highlights -->
+	<section class="wrapper style1">
+		<div class="container">
+			<div class="row double">
+				<section class="4u">
+					<div class="box highlight">
+						<i class="icon major fa-paper-plane"></i>
+						<h3>This Is Important</h3>
+						<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+					</div>
+				</section>
+				<section class="4u">
+					<div class="box highlight">
+						<i class="icon major fa-pencil"></i>
+						<h3>Also Important</h3>
+						<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+					</div>
+				</section>
+				<section class="4u">
+					<div class="box highlight">
+						<i class="icon major fa-wrench"></i>
+						<h3>Probably Important</h3>
+						<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+					</div>
+				</section>
+			</div>
+		</div>
+	</section>
+
+<!-- Gigantic Heading -->
+	<section class="wrapper style2">
+		<div class="container">
+			<header class="major">
+				<h2>A gigantic heading you can use for whatever</h2>
+				<p>With a much smaller subtitle hanging out just below it</p>
+			</header>
+		</div>
+	</section>
+
+<!-- Posts -->
+	<section class="wrapper style1">
+		<div class="container">
+			<div class="row">
+				<section class="6u">
+					<div class="box post">
+						<a href="#" class="image left"><img src="{{ site.baseurl }}/assets/images/pic01.jpg" alt="" /></a>
+						<div class="inner">
+							<h3>The First Thing</h3>
+							<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+						</div>
+					</div>
+				</section>
+				<section class="6u">
+					<div class="box post">
+						<a href="#" class="image left"><img src="{{ site.baseurl }}/assets/images/pic02.jpg" alt="" /></a>
+						<div class="inner">
+							<h3>The Second Thing</h3>
+							<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+						</div>
+					</div>
+				</section>
+			</div>
+			<div class="row">
+				<section class="6u">
+					<div class="box post">
+						<a href="#" class="image left"><img src="{{ site.baseurl }}/assets/images/pic03.jpg" alt="" /></a>
+						<div class="inner">
+							<h3>The Third Thing</h3>
+							<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+						</div>
+					</div>
+				</section>
+				<section class="6u">
+					<div class="box post">
+						<a href="#" class="image left"><img src="{{ site.baseurl }}/assets/images/pic04.jpg" alt="" /></a>
+						<div class="inner">
+							<h3>The Fourth Thing</h3>
+							<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+						</div>
+					</div>
+				</section>
+			</div>
+		</div>
+	</section>
+	
+	{% include cta.html %}
